--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "ts-jest": "^23.0.0",
     "ts-node": "^7.0.1",
     "tslint": "^5.11.0",
+    "tslint-config-airbnb": "^5.11.0",
     "tslint-config-prettier": "^1.15.0",
     "typescript": "^3.0.1",
     "typescript-eslint-parser": "^19.0.1"
