--- a/package.json
+++ b/package.json
@@ -22,24 +22,27 @@
   },
   "dependencies": {
     "@bcgov/nodejs-common-utils": "0.0.16",
+    "babel": "^6.23.0",
+    "babel-jest": "^23.6.0",
     "probot": "^7.0.0",
-    "probot-scheduler": "^1.2.0"
+    "probot-scheduler": "^1.2.0",
+    "transform-runtime": "0.0.0"
   },
   "devDependencies": {
-    "@types/jest": "^23.1.5",
-    "@types/node": "^10.11.3",
+    "@types/jest": "^23.3.5",
+    "@types/node": "^10.11.7",
     "eslint-plugin-typescript": "^0.12.0",
     "jest": "^23.4.0",
     "nodemon": "^1.17.2",
     "smee-client": "^1.0.2",
     "standard": "^12.0.1",
-    "ts-jest": "^23.0.0",
+    "ts-jest": "^23.10.4",
     "ts-node": "^7.0.1",
     "tslint": "^5.11.0",
     "tslint-config-airbnb": "^5.11.0",
     "tslint-config-prettier": "^1.15.0",
-    "typescript": "^3.0.1",
-    "typescript-eslint-parser": "^19.0.1"
+    "typescript": "^3.1.3",
+    "typescript-eslint-parser": "^20.0.0"
   },
   "engines": {
     "node": ">= 8.3.0"
