--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "start": "probot run ./build/index.js",
     "test:lint": "tslint src/**/*.ts  --fix",
     "test": "NODE_ENV=test jest __tests__",
+    "test:coverage": "NODE_ENV=test jest --coverage",
     "test:watch": "jest --watch --notify --notifyMode=change --coverage"
   },
   "dependencies": {
