Cleanup example env file

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,11 @@
 # The ID of your GitHub App
 APP_ID=
-WEBHOOK_SECRET=development
+WEBHOOK_SECRET=
 
-# Use `trace` to get verbose logging or `info` to show less
+# Use `trace` to get verbose logging or
+# `info` to show less
 LOG_LEVEL=debug
 
-# Go to https://smee.io/new set this to the URL that you are redirected to.
+# Go to https://smee.io/new set this to the URL
+# that you are redirected to.
 WEBHOOK_PROXY_URL=
