--- a/package.json
+++ b/package.json
@@ -32,11 +32,13 @@
   "devDependencies": {
     "@types/jest": "^23.3.5",
     "@types/node": "^10.11.7",
+    "@types/supertest": "^2.0.6",
     "eslint-plugin-typescript": "^0.12.0",
     "jest": "^23.4.0",
     "nodemon": "^1.17.2",
     "smee-client": "^1.0.2",
     "standard": "^12.0.1",
+    "supertest": "^3.3.0",
     "ts-jest": "^23.10.4",
     "ts-node": "^7.0.1",
     "tslint": "^5.11.0",
