--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "probot-app"
   ],
   "scripts": {
-    "build": "tsc -p tsconfig.json",
+    "build": "NODE_ENV=production gulp",
     "dev": "nodemon --watch src --inspect=0.0.0.0:9229 --exec \"npm start\"",
     "start": "probot run ./build/index.js",
     "test:lint": "tslint src/**/*.ts  --fix",
@@ -33,6 +33,11 @@
     "@types/jest": "^23.3.5",
     "@types/node": "^10.11.7",
     "eslint-plugin-typescript": "^0.12.0",
+    "gulp": "^4.0.0",
+    "gulp-babel": "^7.0.1",
+    "gulp-clean": "^0.4.0",
+    "gulp-sourcemaps": "^2.6.4",
+    "gulp-typescript": "^5.0.0-alpha.3",
     "jest": "^23.4.0",
     "nodemon": "^1.17.2",
     "smee-client": "^1.0.2",
