Update readme and sample env

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,7 @@
-# The ID of your GitHub App
+# The GitHub app ID
 APP_ID=
+
+# THe GitHub webhook secret
 WEBHOOK_SECRET=
 
 # Use `trace` to get verbose logging or
