--- a/package.json
+++ b/package.json
@@ -30,31 +30,31 @@
     "nconf": "^0.10.0",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
-    "probot": "^7.0.0",
+    "probot": "^7.5.0",
     "transform-runtime": "0.0.0"
   },
   "devDependencies": {
     "@types/dotenv": "^6.1.0",
-    "@types/jest": "^23.3.9",
+    "@types/jest": "^23.3.12",
     "@types/nconf": "0.0.37",
-    "@types/node": "^10.12.10",
-    "eslint-plugin-typescript": "^0.13.0",
+    "@types/node": "^10.12.18",
+    "eslint-plugin-typescript": "^0.14.0",
     "gulp": "^4.0.0",
     "gulp-babel": "^8.0.0",
     "gulp-clean": "^0.4.0",
     "gulp-sourcemaps": "^2.6.4",
-    "gulp-typescript": "^5.0.0-alpha.3",
+    "gulp-typescript": "^5.0.0",
     "jest": "^23.4.0",
-    "nodemon": "^1.18.6",
+    "nodemon": "^1.18.9",
     "smee-client": "^1.0.2",
     "standard": "^12.0.1",
     "ts-jest": "^23.10.5",
     "ts-node": "^7.0.1",
-    "tslint": "^5.11.0",
+    "tslint": "^5.12.1",
     "tslint-config-airbnb": "^5.11.1",
-    "tslint-config-prettier": "^1.16.0",
-    "typescript": "^3.1.6",
-    "typescript-eslint-parser": "^21.0.1"
+    "tslint-config-prettier": "^1.17.0",
+    "typescript": "^3.2.2",
+    "typescript-eslint-parser": "^21.0.2"
   },
   "engines": {
     "node": ">= 8.3.0"
