--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "nodemon": "^1.18.9",
     "smee-client": "^1.0.2",
     "standard": "^12.0.1",
+    "supertest": "^3.4.1",
     "ts-jest": "^23.10.5",
     "ts-node": "^7.0.1",
     "tslint": "^5.12.1",
