--- a/.s2iignore
+++ b/.s2iignore
@@ -3,3 +3,12 @@ __tests__/
 .git//
 .github/
 .vscode/
+.env.example
+.prettierrc
+*.md
+!README.md
+Jenkinsfile
+jest.config.jest
+rmconfig.json
+tsconfig.json
+tslint.json
