Continue work on closing out stale issues

--- a/rmconfig.json
+++ b/rmconfig.json
@@ -1,5 +1,9 @@
 {
-	"pullRequest": {
-		"maxLinesChanged": 250
-	}
+  "pullRequest": {
+    "maxLinesChanged": 250
+  },
+  "staleIssue": {
+    "maxDaysOld": 90,
+    "applyLabel": "wontfix"
+  }
 }
