--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "@bcgov/common-nodejs-utils": "^0.1.17",
     "dotenv": "^8.0.0",
+    "lodash": "^4.17.11",
     "nconf": "^0.10.0",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
