--- a/__tests__/fixtures/compliance.yaml
+++ b/__tests__/fixtures/compliance.yaml
@@ -1,4 +1,12 @@
 ---
+name: compliance
 description: |
-  this is a compliance file
-name: hello
+  This document is used to track a projects PIA and STRA
+  compliance.
+spec:
+  - name: PIA
+    status: completed
+    last-updated: "2019-11-22T00:03:52.138Z"
+  - name: STRA
+    status: in-progress
+    last-updated: "2019-11-22T00:03:52.138Z"
