--- a/templates/COMPLIANCE.yaml
+++ b/templates/COMPLIANCE.yaml
@@ -4,8 +4,8 @@ description: |
   compliance.
 spec:
   - name: PIA
-    status: "[PIA_STATUS]"
+    status: [PIA_STATUS]
     last-updated: "[TODAY]"
   - name: STRA
-    status: "[STRA_STATUS]"
+    status: [STRA_STATUS]
     last-updated: "[TODAY]"
