--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "@bcgov/common-nodejs-utils": "^0.1.18",
     "dotenv": "^8.0.0",
+    "js-yaml": "^3.13.1",
     "lodash": "^4.17.14",
     "nconf": "^0.10.0",
     "passport": "^0.4.0",
