--- a/templates/COMPLIANCE.yaml
+++ b/templates/COMPLIANCE.yaml
@@ -4,8 +4,8 @@ description: |
   compliance.
 spec:
   - name: PIA
-    status: [PIA_STATUS]
-    last-updated: "[TODAY]"
+    status: PIA_STATUS_HERE
+    last-updated: '[TODAY]'
   - name: STRA
-    status: [STRA_STATUS]
-    last-updated: "[TODAY]"
+    status: STRA_STATUS_HERE
+    last-updated: '[TODAY]'
