--- a/__tests__/fixtures/compliance.yaml
+++ b/__tests__/fixtures/compliance.yaml
@@ -5,8 +5,8 @@ description: |
   compliance.
 spec:
   - name: PIA
-    status: completed
+    status: TBD
     last-updated: "2019-11-22T00:03:52.138Z"
   - name: STRA
-    status: in-progress
+    status: TBD
     last-updated: "2019-11-22T00:03:52.138Z"
