--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
     "build": "NODE_ENV=production gulp",
     "dev": "nodemon --watch src --inspect=0.0.0.0:9229 --exec \"npm start\"",
     "start": "probot run ./build/index.js",
-    "test:lint": "tslint src/**/*.ts  --fix",
+    "test:lint": "NODE_ENV=test tslint src/**/*.ts  --fix",
     "test": "NODE_ENV=test jest __tests__",
     "test:coverage": "NODE_ENV=test jest --coverage",
-    "test:watch": "jest --watch --notify --notifyMode=change --coverage"
+    "test:watch": "NODE_ENV=test jest --watch --notify --notifyMode=change --coverage"
   },
   "dependencies": {
     "@bcgov/common-nodejs-utils": "^0.1.18",
