Add debug capability

--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "repo-mountie",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "description": "A bot to help ensure cultural niceties are respected.",
   "author": "Jason C. Leach <jason.leach@fullboar.ca>",
   "license": "Apache-2.0",
-  "repository": "https://github.com/jleach/repo-mountie.git",
-  "homepage": "https://github.com/jleach/repo-mountie",
-  "bugs": "https://github.com/jleach/repo-mountie/issues",
+  "repository": "https://github.com/bcgov/repo-mountie.git",
+  "homepage": "https://github.com/bcgov/repo-mountie",
+  "bugs": "https://github.com/bcgov/repo-mountie/issues",
   "keywords": [
     "probot",
     "github",
@@ -14,7 +14,7 @@
   ],
   "scripts": {
     "build": "NODE_ENV=production gulp",
-    "dev": "nodemon --watch src --inspect=0.0.0.0:9229 --exec \"npm start\"",
+    "dev": "nodemon --watch src --inspect=5858 -e ts,tsx --exec node -r ts-node/register ./src/main.ts",
     "start": "probot run ./build/index.js",
     "test:lint": "NODE_ENV=test tslint src/**/*.ts  --fix",
     "test": "NODE_ENV=test jest __tests__",
