--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,18 +2,38 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "name": "Debug Jest Tests",
       "type": "node",
-      "request": "launch",
-      "runtimeArgs": [
-        "--inspect-brk",
-        "${workspaceRoot}/node_modules/.bin/jest",
-        "--runInBand",
-        "--coverage",
-        "false"
-      ],
-      "console": "integratedTerminal",
-      "internalConsoleOptions": "neverOpen"
+      "request": "attach",
+      "name": "Attach Remote",
+      "protocol": "inspector",
+      "port": 9229,
+      "restart": true,
+      "preLaunchTask": null,
+      "runtimeExecutable": null,
+      "localRoot": "${workspaceFolder}/src/",
+      "remoteRoot": "/opt/app-root/src/build",
+      "outFiles": ["${workspaceFolder}/build/**/*.js"],
+      "skipFiles": ["<node_internals>/**/*.js"],
+      "sourceMaps": true
+    },
+    {
+      "name": "Launch Debug",​
+      "type": "node",​
+      "request": "launch",​
+      "cwd": "${workspaceRoot}",​
+      "args": ["src/main.ts"]​,
+      "runtimeArgs": ["-r", "ts-node/register"],​
+      "protocol": "inspector",
+      "internalConsoleOptions": "openOnSessionStart"  
+    },
+    {
+      "name": "Attach to Process",
+      "type": "node",
+      "request": "attach",
+      "restart": true,
+      "port": 5858,
+      "outFiles": [],
+      "sourceMaps": true
     }
   ]
 }
