--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "build": "NODE_ENV=production gulp",
     "dev": "nodemon --watch src --inspect=5858 -e ts,tsx --exec node -r ts-node/register ./src/main.ts",
     "start": "probot run ./build/index.js",
-    "test:lint": "NODE_ENV=test tslint src/**/*.ts  --fix",
+    "test:lint": "NODE_ENV=test tslint src/**/*.ts",
     "test": "NODE_ENV=test jest __tests__",
     "test:coverage": "NODE_ENV=test jest --coverage",
     "test:watch": "NODE_ENV=test jest --watch --notify --notifyMode=change --coverage"
