--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -41,6 +41,7 @@ jobs:
       - name: npm install, build, and test
         run: |
           npm ci
+          npm run test:lint
           npm run build --if-present
         env:
           CI: "true"
