--- a/openshift/templates/deploy.yaml
+++ b/openshift/templates/deploy.yaml
@@ -159,6 +159,9 @@ objects:
               image: registry.redhat.io/rhscl/mongodb-36-rhel7:latest
               ports:
                 - containerPort: 27017
+              volumeMounts:
+                - name: mongodb-vol
+                  mountPath: "/var/lib/mongodb/data"
               env:
                 - name: MONGODB_ADMIN_PASSWORD
                   valueFrom:
@@ -184,6 +187,10 @@ objects:
                 limits:
                   cpu: 60m
                   memory: 256Mi
+          volumes:
+            - name: mongodb-vol
+              persistentVolumeClaim:
+                claimName: mongodb-data
   - apiVersion: v1
     kind: Service
     metadata:
@@ -197,6 +204,18 @@ objects:
         - name: mongo
           port: 27017
           targetPort: 27017
+  - apiVersion: v1
+    kind: PersistentVolumeClaim
+    metadata:
+      name: mongodb-data
+      labels:
+        app: repomountie
+    spec:
+      accessModes:
+        - ReadWriteOnce
+      resources:
+        requests:
+          storage: ${VOLUME_CAPACITY}
 parameters:
   - name: APP_ID
     description: |
@@ -242,4 +261,9 @@ parameters:
   - name: REPOMOUNTIE_IMAGE_TAG
     description: |
       The tag used to deploy the repomountie component.
+    required: true
+  - name: VOLUME_CAPACITY
+    description: |
+      The volume size for the mongodb persistent storage.
+    from: "[0-9]{3}Gi"
     required: true
