--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dotenv": "^8.0.0",
     "js-yaml": "^3.13.1",
     "lodash": "^4.17.14",
+    "mongoose": "^5.8.10",
     "nconf": "^0.10.0",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
