--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "repo-mountie",
+  "name": "repomountie",
   "version": "0.3.1",
   "description": "A bot to help ensure cultural niceties are respected.",
   "author": "Jason C. Leach <jason.leach@fullboar.ca>",
   "license": "Apache-2.0",
-  "repository": "https://github.com/bcgov/repo-mountie.git",
-  "homepage": "https://github.com/bcgov/repo-mountie",
-  "bugs": "https://github.com/bcgov/repo-mountie/issues",
+  "repository": "https://github.com/bcgov/repomountie.git",
+  "homepage": "https://github.com/bcgov/repomountie",
+  "bugs": "https://github.com/bcgov/repomountie/issues",
   "keywords": [
     "probot",
     "github",
