--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "gulp-sourcemaps": "^2.6.5",
     "gulp-typescript": "^6.0.0-alpha.1",
     "jest": "^24.8.0",
+    "nock": "^12.0.1",
     "nodemon": "^2.0.1",
     "smee-client": "^1.1.0",
     "standard": "^14.3.1",
