--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@types/node": "^12.12.14",
     "babel": "^6.23.0",
     "babel-jest": "^24.8.0",
+    "csv": "^5.3.1",
     "eslint-plugin-typescript": "^0.14.0",
     "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
