Test OCP action

--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -45,3 +45,16 @@ jobs:
           npm run build --if-present
         env:
           CI: "true"
+  ocp:
+    runs-on: ubuntu-latest
+    steps:
+      - name: OpenShift Action
+        uses: redhat-developer/openshift-actions@v1.1
+        with:
+          version: "latest"
+          openshift_server_url: ${{ secrets.OPENSHIFT_SERVER_URL }}
+          parameters: '{"apitoken": "${{ secrets.API_TOKEN }}", "acceptUntrustedCerts": "true"}'
+          cmd: |
+            'version'
+            'start-build repo-mountie-master-build --follow -n devhub-tools'
+            'status'
