--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -21,6 +21,7 @@ jobs:
           debug: "true"
   build:
     runs-on: ubuntu-latest
+    needs: test
     strategy:
       matrix:
         node-version: [10.x, 12.x]
@@ -47,6 +48,7 @@ jobs:
           CI: "true"
   ocp:
     runs-on: ubuntu-latest
+    needs: [test, build]
     steps:
       - name: OpenShift Action
         uses: redhat-developer/openshift-actions@v1.1
