--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -46,7 +46,7 @@ jobs:
           npm run build --if-present
         env:
           CI: "true"
-  ocp:
+  img-build:
     if: github.event_name == 'push' && github.ref == 'refs/heads/master'
     runs-on: ubuntu-latest
     needs: [test, build]
