--- a/openshift/cicd.yaml
+++ b/openshift/cicd.yaml
@@ -1,73 +1,88 @@
-apiVersion: v1
-kind: ServiceAccount
+apiVersion: template.openshift.io/v1
+kind: Template
 metadata:
-  name: github-cicd
-  labels:
-    app: github-cicd
----
-kind: Role
-apiVersion: authorization.openshift.io/v1
-metadata:
-  name: github-cicd
-  labels:
-    app: github-cicd
-rules:
-  - apiGroups:
-      - build.openshift.io
-      - ""
-    resources:
-      - buildconfigs/instantiate
-    verbs:
-      - create
-  - apiGroups:
-      - build.openshift.io
-      - ""
-    resources:
-      - buildconfigs
-      - builds
-    verbs:
-      - create
-      - get
-      - list
-  - apiGroups:
-      - image.openshift.io
-      - ""
-    resources:
-      - imagestreamimages
-      - imagestreamtags
-    verbs:
-      - create
-      - get
-      - list
-  - apiGroups:
-      - image.openshift.io
-      - ""
-    resources:
-      - imagestreams
-    verbs:
-      - get
-      - list
-  - apiGroups:
-      - build.openshift.io
-      - ""
-    resources:
-      - builds/log
-    verbs:
-      - get
-      - list
-      - watch
----
-kind: RoleBinding
-apiVersion: authorization.openshift.io/v1
-metadata:
-  name: github-cicd
-  labels:
-    app: github-cicd
-subjects:
-  - kind: ServiceAccount
-    name: github-cicd
-roleRef:
-  kind: Role
-  name: github-cicd
-  namespace: devhub-tools
-  apiGroup: authorization.openshift.io
+  name: github-cicd-credentials
+objects:
+  - apiVersion: v1
+    kind: ServiceAccount
+    metadata:
+      name: ${NAME}
+      labels:
+        app: ${NAME}
+  - apiVersion: authorization.openshift.io/v1
+    kind: Role
+    metadata:
+      name: ${NAME}
+      labels:
+        app: ${NAME}
+    rules:
+      - apiGroups:
+          - build.openshift.io
+          - ""
+        resources:
+          - buildconfigs/instantiate
+        verbs:
+          - create
+      - apiGroups:
+          - build.openshift.io
+          - ""
+        resources:
+          - buildconfigs
+          - builds
+        verbs:
+          - create
+          - get
+          - list
+      - apiGroups:
+          - image.openshift.io
+          - ""
+        resources:
+          - imagestreamimages
+          - imagestreamtags
+        verbs:
+          - create
+          - get
+          - list
+      - apiGroups:
+          - image.openshift.io
+          - ""
+        resources:
+          - imagestreams
+        verbs:
+          - get
+          - list
+      - apiGroups:
+          - build.openshift.io
+          - ""
+        resources:
+          - builds/log
+        verbs:
+          - get
+          - list
+          - watch
+  - apiVersion: authorization.openshift.io/v1
+    kind: RoleBinding
+    metadata:
+      name: ${NAME}
+      labels:
+        app: ${NAME}
+    subjects:
+      - kind: ServiceAccount
+        name: ${NAME}
+    roleRef:
+      kind: Role
+      name: ${NAME}
+      namespace: ${NAMESPACE}
+      apiGroup: authorization.openshift.io
+parameters:
+  - description:
+      The name assigned to all of the objects defined in this template.  You
+      should keep this as default unless your know what your doing.
+    displayName: Namespace
+    name: NAMESPACE
+    required: true
+  - description: The name used for all components of the credentials.
+    displayName: Credentials Name
+    name: NAME
+    required: true
+    value: github-cicd
