--- a/openshift/cicd.yaml
+++ b/openshift/cicd.yaml
@@ -75,14 +75,16 @@ objects:
       namespace: ${NAMESPACE}
       apiGroup: authorization.openshift.io
 parameters:
-  - description:
-      The name assigned to all of the objects defined in this template.  You
-      should keep this as default unless your know what your doing.
-    displayName: Namespace
+  - displayName: Namespace
+    description: |
+      The namespace where all of components of the
+      credentials are stored.
     name: NAMESPACE
     required: true
-  - description: The name used for all components of the credentials.
-    displayName: Credentials Name
+  - displayName: Credentials Name
+    description: |
+      The name used for all components of the 
+      credentials.
     name: NAME
     required: true
     value: github-cicd
