--- a/package.json
+++ b/package.json
@@ -45,7 +45,9 @@
     "gulp-clean": "^0.4.0",
     "gulp-sourcemaps": "^2.6.5",
     "gulp-typescript": "^6.0.0-alpha.1",
+    "husky": "^4.3.0",
     "jest": "^26.1.0",
+    "lint-staged": "^10.4.0",
     "nodemon": "^2.0.4",
     "smee-client": "^1.1.0",
     "standard": "^14.3.4",
@@ -57,6 +59,17 @@
     "tslint-config-prettier": "^1.18.0",
     "typescript": "^3.9.6",
     "typescript-eslint-parser": "^22.0.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "./src/**/*.ts": [
+      "npx prettier ./src/**/*.ts --write",
+      "tslint ./src/**/*.ts --fix"
+    ]
   },
   "engines": {
     "node": ">= 10.0.0"
