--- a/.github/workflows/bot.yml
+++ b/.github/workflows/bot.yml
@@ -46,12 +46,16 @@ jobs:
           npm run build --if-present
         env:
           CI: "true"
-  img-build:
+  s2i-build:
     if: github.event_name == 'push' && github.ref == 'refs/heads/master'
     runs-on: ubuntu-latest
     needs: [test, build]
     steps:
-      - name: OpenShift Action
+      - name: Image Build
+        env:
+          NAMESPACE: 85d4e0-tools
+          BUILD_NAME: repomountie-master-build
+          IMAGE_NAME: repomountie
         uses: redhat-developer/openshift-actions@v1.1
         with:
           version: "latest"
@@ -59,4 +63,4 @@ jobs:
           parameters: '{"apitoken": "${{ secrets.OpenShiftToken }}", "acceptUntrustedCerts": "true"}'
           cmd: |
             'version'
-            'start-build repo-mountie-master-build --follow -n devhub-tools'
+            'start-build ${BUILD_NAME} -n ${NAMESPACE} --follow'
