--- a/openshift/templates/build.yaml
+++ b/openshift/templates/build.yaml
@@ -2,35 +2,28 @@ apiVersion: template.openshift.io/v1
 kind: Template
 metadata:
   labels:
-    application: ${NAME}
-  name: ${NAME}-build
+    app: repomountie
+  name: repomountie-build
   namespace: devhub-dev
 objects:
 - apiVersion: v1
-  kind: Secret
-  metadata:
-    labels:
-      app: ${NAME}
-    name: ${NAME}-github
-  stringData:
-    WebHookSecretKey: ${GITHUB_SECRET}
-  type: Opaque
-- apiVersion: v1
   kind: ImageStream
   metadata:
-    name: ${NAME}
+    name: repomountie
+    labels:
+      app: repomountie
 - apiVersion: v1
   kind: BuildConfig
   metadata:
+    name: repomountie-${GIT_REF}-build
     labels:
-      app: ${NAME}-${GIT_REF}-build
-      name: ${NAME}-${GIT_REF}-build
-    name: ${NAME}-${GIT_REF}-build
+      app: repomountie
+      name: repomountie-${GIT_REF}-build
   spec:
     output:
       to:
         kind: ImageStreamTag
-        name: ${NAME}:${OUTPUT_IMAGE_TAG}
+        name: repomountie:${OUTPUT_IMAGE_TAG}
     resources:
       limits:
         cpu: ${CPU_LIMIT}
@@ -38,7 +31,7 @@ objects:
       requests:
         cpu: ${CPU_REQUEST}
         memory: ${MEMORY_REQUEST}
-    runPolicy: Parallel
+    runPolicy: Serial
     source:
       contextDir: ${SOURCE_CONTEXT_DIR}
       git:
@@ -57,48 +50,11 @@ objects:
         incremental: false
       type: Source
     triggers:
-    - type: ImageChange
     - type: ConfigChange
-- apiVersion: v1
-  kind: BuildConfig
-  metadata:
-    creationTimestamp: null
-    labels:
-      app: ${NAME}-pipeline
-      name: ${NAME}-pipeline
-      template: ${NAME}-pipeline
-    name: ${NAME}-pipeline
-  spec:
-    nodeSelector: null
-    output: {}
-    postCommit: {}
-    resources: {}
-    runPolicy: Parallel
-    source:
-      git:
-        ref: ${GIT_REF}
-        uri: ${GIT_REPO_URL}
-      type: Git
-    strategy:
-      jenkinsPipelineStrategy:
-        jenkinsfilePath: Jenkinsfile
-      type: JenkinsPipeline
-    triggers:
-    - github:
-        secretReference:
-          name: ${NAME}-github
-      type: GitHub
-  status:
-    lastVersion: 0
 parameters:
-- description: The name assigned to all of the objects defined in this template.  You
-    should keep this as default unless your know what your doing.
-  displayName: Name
-  name: NAME
-  required: true
-  value: repomountie
-- description: The URL to your GIT repo, don't use the this default unless your just
-    experimenting.
+- description: |
+    The URL to your GIT repo, don't use the this default unless
+    your just experimenting.
   displayName: Git Repo URL
   name: GIT_REPO_URL
   required: true
@@ -112,7 +68,7 @@ parameters:
   displayName: Source Context Directory
   name: SOURCE_CONTEXT_DIR
   required: false
-  value: ""
+  value: "/"
 - description: The tag given to the built image.
   displayName: Output Image Tag
   name: OUTPUT_IMAGE_TAG
@@ -153,8 +109,3 @@ parameters:
   name: MEMORY_REQUEST
   required: true
   value: 2Gi
-- displayName: GitHub web hook secret
-  from: '[a-zA-Z0-9]{16}'
-  generate: expression
-  name: GITHUB_SECRET
-  required: true
