--- a/package.json
+++ b/package.json
@@ -17,13 +17,13 @@
     "dev": "nodemon --watch src --inspect=5858 -e ts,tsx --exec node -r ts-node/register ./src/main.ts",
     "start": "probot run ./build/index.js",
     "report": "ts-node scripts/report.ts",
-    "test:lint": "NODE_ENV=test tslint src/**/*.ts",
+    "test:lint": "NODE_ENV=test eslint src/**/*.ts",
     "test": "NODE_ENV=test jest __tests__",
     "test:coverage": "NODE_ENV=test jest --coverage",
     "test:watch": "NODE_ENV=test jest --watch --notify --notifyMode=change --coverage"
   },
   "dependencies": {
-    "@bcgov/common-nodejs-utils": "^0.1.21",
+    "@bcgov/common-nodejs-utils": "^0.1.22",
     "dotenv": "^8.0.0",
     "js-yaml": "^3.14.0",
     "lodash": "^4.17.19",
@@ -39,8 +39,12 @@
     "@types/jest": "^26.0.4",
     "@types/nconf": "0.10.0",
     "@types/node": "^14.0.20",
+    "@typescript-eslint/eslint-plugin": "^4.23.0",
+    "@typescript-eslint/parser": "^4.23.0",
     "csv": "^5.3.2",
-    "eslint-plugin-typescript": "^0.14.0",
+    "eslint": "^7.26.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^3.4.0",
     "gulp": "^4.0.2",
     "gulp-clean": "^0.4.0",
     "gulp-sourcemaps": "^2.6.5",
@@ -49,16 +53,13 @@
     "jest": "^26.1.0",
     "lint-staged": "^10.4.0",
     "nodemon": "^2.0.4",
+    "prettier": "^2.3.0",
     "smee-client": "^1.1.0",
     "standard": "^14.3.4",
     "supertest": "^4.0.2",
     "ts-jest": "^26.1.1",
     "ts-node": "^8.10.2",
-    "tslint": "^6.1.3",
-    "tslint-config-airbnb": "^5.11.1",
-    "tslint-config-prettier": "^1.18.0",
-    "typescript": "^3.9.6",
-    "typescript-eslint-parser": "^22.0.0"
+    "typescript": "^3.9.6"
   },
   "husky": {
     "hooks": {
@@ -68,14 +69,14 @@
   "lint-staged": {
     "./src/**/*.ts": [
       "npx prettier ./src/**/*.ts --write",
-      "tslint ./src/**/*.ts --fix"
+      "eslint ./src/**/*.ts --fix"
     ],
     "./__tests__/**/*.ts": [
       "npx prettier ./__tests__/**/*.ts --write",
-      "tslint ./__tests__/**/*.ts --fix"
+      "eslint ./__tests__/**/*.ts --fix"
     ]
   },
   "engines": {
-    "node": ">= 10.0.0"
+    "node": ">= 12.16.3"
   }
 }
