--- a/.github/workflows/bot.yml
+++ b/.github/workflows/bot.yml
@@ -46,6 +46,14 @@ jobs:
           npm run build --if-present
         env:
           CI: "true"
+      - name: Run Sonar Analysis
+        run: mvn sonar:sonar
+          -Dsonar.login=${{ secrets.SONAR_TOKEN }}
+          -Dsonar.host.url=https://sonarcloud.io
+          -Dsonar.organization=bcgov-sonarcloud
+          -Dsonar.projectKey=${{ secrets.SONAR_PROJECT_KEY }}
+        env:
+          GITHUB_TOKEN: ${{ github.token }}
   s2i-build:
     if: github.event_name == 'push' && github.ref == 'refs/heads/master'
     runs-on: ubuntu-latest
