--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,4 @@
-sonar.organization=bcgov
+sonar.organization=bcgov-sonarcloud
 sonar.projectKey=repomountie
 
 # relative paths to source directories. More details and properties are described
