--- a/.github/workflows/bot.yml
+++ b/.github/workflows/bot.yml
@@ -10,7 +10,15 @@ jobs:
       - uses: actions/setup-node@master
         with:
           node-version: "12"
-      - run: npm ci
+      - name: SonarCloud Scan
+        uses: sonarsource/sonarcloud-github-action@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+      - run: |
+          npm ci
+          npm run test
+          npm run test:lint
       # - name: Test & publish code coverage
       #   uses: paambaati/codeclimate-action@v2.3.0
       #   env:
@@ -19,11 +27,6 @@ jobs:
       #   with:
       #     coverageCommand: npm run test:coverage
       #     debug: "true"
-      - name: SonarCloud Scan
-        uses: sonarsource/sonarcloud-github-action@master
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
   build:
     runs-on: ubuntu-latest
     needs: test
@@ -47,7 +50,6 @@ jobs:
       - name: npm install, build, and test
         run: |
           npm ci
-          npm run test:lint
           npm run build --if-present
         env:
           CI: "true"
