--- a/.github/workflows/bot.yml
+++ b/.github/workflows/bot.yml
@@ -10,15 +10,22 @@ jobs:
       - uses: actions/setup-node@master
         with:
           node-version: "12"
+      - run: |
+          npm ci
+          npm run test
+          npm run test:lint
+  quality:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@master
+      - uses: actions/setup-node@master
+        with:
+          node-version: "12"
       - name: SonarCloud Scan
         uses: sonarsource/sonarcloud-github-action@master
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-      - run: |
-          npm ci
-          npm run test
-          npm run test:lint
       # - name: Test & publish code coverage
       #   uses: paambaati/codeclimate-action@v2.3.0
       #   env:
@@ -29,7 +36,7 @@ jobs:
       #     debug: "true"
   build:
     runs-on: ubuntu-latest
-    needs: test
+    needs: [test, quality]
     strategy:
       matrix:
         node-version: [10.x, 12.x]
@@ -56,7 +63,7 @@ jobs:
   s2i-build:
     if: github.event_name == 'push' && github.ref == 'refs/heads/master'
     runs-on: ubuntu-latest
-    needs: [test, build]
+    needs: [build]
     steps:
       - name: Image Build
         env:
