Change node version

--- a/.github/workflows/bot.yml
+++ b/.github/workflows/bot.yml
@@ -39,7 +39,7 @@ jobs:
     needs: [test, quality]
     strategy:
       matrix:
-        node-version: [10.x, 12.x]
+        node-version: [12.x]
     steps:
       - uses: actions/checkout@v1
       - uses: actions/setup-node@v1
