--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,3 +4,5 @@ sonar.projectKey=repomountie
 # relative paths to source directories. More details and properties are described
 # in https://sonarcloud.io/documentation/project-administration/narrowing-the-focus/ 
 sonar.sources=./src
+sonar.javascript.coveragePlugin=lcov
+sonar.javascript.lcov.reportPaths=coverage/lcov.info
