--- a/.github/workflows/bot.yml
+++ b/.github/workflows/bot.yml
@@ -31,11 +31,11 @@ jobs:
           npm run test:coverage --if-present
         env:
           CI: "true"
-      - name: SonarCloud Scan
-        uses: sonarsource/sonarcloud-github-action@master
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+      # - name: SonarCloud Scan
+      #   uses: sonarsource/sonarcloud-github-action@master
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      #     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
       # - name: Test & publish code coverage
       #   uses: paambaati/codeclimate-action@v2.3.0
       #   env:
